--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,18 @@
                     <mainClass>in.myworkspot.tourplanner.TourPlannerApplication</mainClass>
                 </configuration>
             </plugin>
+            <!-- SonarQube plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.11.0.3922</version>
+                <configuration>
+                    <sonar.host.url>http://127.0.0.1:9300</sonar.host.url>
+                    <sonar.projectKey>SpringBoot</sonar.projectKey>
+                    <sonar.projectName>SpringBoot</sonar.projectName>
+                    <sonar.login>sqp_ac910ea1d8fa56d25edde5de70eaca6d42b8181e</sonar.login>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
